syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

// CTF Exchange Events
message CtfExchangeEvents {
    repeated Ctfexchange_FeeCharged ctfexchange_fee_chargeds = 1;
    repeated Ctfexchange_NewAdmin ctfexchange_new_admins = 2;
    repeated Ctfexchange_NewOperator ctfexchange_new_operators = 3;
    repeated Ctfexchange_OrderCancelled ctfexchange_order_cancelleds = 4;
    repeated Ctfexchange_OrderFilled ctfexchange_order_filleds = 5;
    repeated Ctfexchange_OrdersMatched ctfexchange_orders_matcheds = 6;
    repeated Ctfexchange_ProxyFactoryUpdated ctfexchange_proxy_factory_updateds = 7;
    repeated Ctfexchange_RemovedAdmin ctfexchange_removed_admins = 8;
    repeated Ctfexchange_RemovedOperator ctfexchange_removed_operators = 9;
    repeated Ctfexchange_SafeFactoryUpdated ctfexchange_safe_factory_updateds = 10;
    repeated Ctfexchange_TokenRegistered ctfexchange_token_registereds = 11;
    repeated Ctfexchange_TradingPaused ctfexchange_trading_pauseds = 12;
    repeated Ctfexchange_TradingUnpaused ctfexchange_trading_unpauseds = 13;
}

// Conditional Tokens Framework Events
message CtfEvents {
    repeated Ctf_ConditionPreparation ctf_condition_preparations = 1;
    repeated Ctf_ConditionResolution ctf_condition_resolutions = 2;
    repeated Ctf_PositionSplit ctf_position_splits = 3;
    repeated Ctf_PositionMerge ctf_position_merges = 4;
    repeated Ctf_PositionRedeem ctf_position_redemptions = 5;
}

// USDC Events
message UsdcEvents {
    repeated Usdc_Transfer usdc_transfers = 1;
    repeated Usdc_Approval usdc_approvals = 2;
}

// Combined Trading Data
message TradingData {
    repeated Trade trade_events = 1;
    repeated Market market_events = 2;
    repeated User user_events = 3;
    uint64 total_trades = 4;
    string total_volume = 5;
    uint64 block_number = 6;
    google.protobuf.Timestamp block_timestamp = 7;
}

// Trade Event
message Trade {
    string transaction_hash = 1;
    uint32 log_index = 2;
    google.protobuf.Timestamp timestamp = 3;
    uint64 block_number = 4;
    string trader = 5;
    string market_id = 6;
    string outcome_token = 7;
    string amount = 8;
    string price = 9;
    string fee = 10;
    string trade_type = 11; // "buy" or "sell"
}

// Market Event
message Market {
    string market_id = 1;
    string condition_id = 2;
    string question_id = 3;
    string oracle = 4;
    uint32 outcome_slot_count = 5;
    google.protobuf.Timestamp creation_timestamp = 6;
    string status = 7; // "open", "closed", "resolved"
}

// User Event
message User {
    string address = 1;
    google.protobuf.Timestamp first_seen = 2;
    google.protobuf.Timestamp last_seen = 3;
    uint64 total_trades = 4;
    string total_volume = 5;
}
// CTF Event Messages
message Ctf_ConditionPreparation {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes condition_id = 5;
    bytes oracle = 6;
    bytes question_id = 7;
    uint32 outcome_slot_count = 8;
}

message Ctf_ConditionResolution {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes condition_id = 5;
    bytes oracle = 6;
    bytes question_id = 7;
    uint32 outcome_slot_count = 8;
    repeated string payouts = 9;
}

message Ctf_PositionSplit {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes stakeholder = 5;
    bytes collateral_token = 6;
    bytes parent_collection_id = 7;
    bytes condition_id = 8;
    repeated string partition = 9;
    string amount = 10;
}

message Ctf_PositionMerge {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes stakeholder = 5;
    bytes collateral_token = 6;
    bytes parent_collection_id = 7;
    bytes condition_id = 8;
    repeated string partition = 9;
    string amount = 10;
}

message Ctf_PositionRedeem {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes redeemer = 5;
    bytes collateral_token = 6;
    bytes parent_collection_id = 7;
    bytes condition_id = 8;
    repeated string index_sets = 9;
    string payout = 10;
}

// USDC Event Messages
message Usdc_Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string value = 7;
}

message Usdc_Approval {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes owner = 5;
    bytes spender = 6;
    string value = 7;
}

message Ctfexchange_FeeCharged {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes receiver = 5;
    string token_id = 6;
    string amount = 7;
}
message Ctfexchange_NewAdmin {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes new_admin_address = 5;
    bytes admin = 6;
}
message Ctfexchange_NewOperator {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes new_operator_address = 5;
    bytes admin = 6;
}
message Ctfexchange_OrderCancelled {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes order_hash = 5;
}
message Ctfexchange_OrderFilled {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes order_hash = 5;
    bytes maker = 6;
    bytes taker = 7;
    string maker_asset_id = 8;
    string taker_asset_id = 9;
    string maker_amount_filled = 10;
    string taker_amount_filled = 11;
    string fee = 12;
}
message Ctfexchange_OrdersMatched {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes taker_order_hash = 5;
    bytes taker_order_maker = 6;
    string maker_asset_id = 7;
    string taker_asset_id = 8;
    string maker_amount_filled = 9;
    string taker_amount_filled = 10;
}
message Ctfexchange_ProxyFactoryUpdated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes old_proxy_factory = 5;
    bytes new_proxy_factory = 6;
}
message Ctfexchange_RemovedAdmin {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes removed_admin = 5;
    bytes admin = 6;
}
message Ctfexchange_RemovedOperator {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes removed_operator = 5;
    bytes admin = 6;
}
message Ctfexchange_SafeFactoryUpdated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes old_safe_factory = 5;
    bytes new_safe_factory = 6;
}
message Ctfexchange_TokenRegistered {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string token0 = 5;
    string token1 = 6;
    bytes condition_id = 7;
}
message Ctfexchange_TradingPaused {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes pauser = 5;
}
message Ctfexchange_TradingUnpaused {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes pauser = 5;
}
  
